[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/MoveableBlocks.png" type="Texture" id=1]
[ext_resource path="res://src/MoveableBlockAtlas.tres" type="Texture" id=2]
[ext_resource path="res://objects/MoveableBlockArrows.gd" type="Script" id=3]
[ext_resource path="res://objects/MoveableBlock.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3, 0.75 )

[node name="MoveableBlock" type="KinematicBody2D" groups=["MoveableBlock"]]
z_index = 1
collision_layer = 9
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Arrows" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ArrowDown" type="Sprite" parent="Arrows"]
visible = false
texture = SubResource( 1 )

[node name="ArrowRight" type="Sprite" parent="Arrows"]
visible = false
texture = SubResource( 2 )

[node name="ArrowLeft" type="Sprite" parent="Arrows"]
visible = false
texture = SubResource( 3 )

[node name="ArrowUp" type="Sprite" parent="Arrows"]
visible = false
texture = SubResource( 4 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 6 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 6 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -8, 0 )
rotation = -1.5708
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 6 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 8, 0 )
rotation = 1.5708
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="WorldCheckUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )

[node name="WorldCheckDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -16 )

[node name="WorldCheckLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )

[node name="WorldCheckRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 0 )

[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
